apps/colcare/web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colcare-web
  namespace: colcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colcare-web
  template:
    metadata:
      labels:
        app: colcare-web
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: colcare-web

      containers:
        - name: colcare-web
          image: ghcr.io/harris-consult/colcare-web:latest
          ports:
            - containerPort: 3000
