apps/colcare/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: colcare-web
  namespace: colcare
spec:
  selector:
    app: colcare-web
  ports:
    - port: 80
      targetPort: 4000
