apps/colcare/web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colcare-web-ingress
  namespace: colcare
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx # Explicitly define your controller
  tls:
    - hosts:
        - web.colcare.harrisconsult.org
        - web.mycolcare.com
        - mycolcare.com
        - www.mycolcare.com
      secretName: colcare-web-tls # Cert-manager will create this secret
  rules:
    - host: web.colcare.harrisconsult.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: colcare-web # MUST match the metadata.name of your Service
                port:
                  number: 80
    - host: web.mycolcare.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: colcare-web # MUST match the metadata.name of your Service
                port:
                  number: 80
    - host: mycolcare.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: colcare-web # MUST match the metadata.name of your Service
                port:
                  number: 80
    - host: www.mycolcare.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: colcare-web # MUST match the metadata.name of your Service
                port:
                  number: 80
